<resources>
    <string name="app_name">MoviesHD</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movies_hd">MoviesHD</string>
    <string name="ultimas_en_cine">Ver ahora</string>
    <string name="description_movie">Description movie</string>
    <string name="title_movie">Title Movie</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="icon_count">Icon count</string>
    <string name="icon_popularity">Icon popularity</string>
    <string name="agregar_a_favoritos">Agregar a Favoritos</string>
    <string name="image_path_poster_movie">Image path poster movie</string>
    <string name="icon_date_release">Icon date release</string>
    <string name="buscar_movies">Buscar movies</string>
    <string name="mi_buscador">Mi Buscador</string>

    <string name="search_no_results">No movie found</string>
</resources>