<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.maggiver.movieshd.homeMovie.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailMovieFragmentFullScreen"
            app:destination="@id/detailMovieFragmentFullScreen" />
        <action
            android:id="@+id/action_navigation_home_to_searchMovieFragmentFullScreen"
            app:destination="@id/searchMovieFragmentFullScreen" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.maggiver.movieshd.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.maggiver.movieshd.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <dialog
        android:id="@+id/detailMovieFragmentFullScreen"
        android:name="com.maggiver.movieshd.homeMovie.ui.DetailMovieFragmentFullScreen"
        android:label="fragment_detail_movie_full_screen"
        tools:layout="@layout/fragment_detail_movie_full_screen" >
        <argument
            android:name="movieCustom"
            app:argType="com.maggiver.movieshd.homeMovie.data.provider.remote.model.MovieCustom" />
    </dialog>

    <dialog
        android:id="@+id/searchMovieFragmentFullScreen"
        android:name="com.maggiver.movieshd.homeMovie.ui.SearchMovieFragmentFullScreen"
        android:label="fragment_search_screen_full"
        tools:layout="@layout/fragment_search_movie_full_screen" >
        <action
            android:id="@+id/action_searchMovieFragmentFullScreen_to_detailMovieFragmentFullScreen"
            app:destination="@id/detailMovieFragmentFullScreen" />
    </dialog>

</navigation>