<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeMovie.ui.DetailMovieFragmentFullScreen">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/image_path_poster_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:gravity="start"
                android:text=""
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageMovieDetail"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/content_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:contentPadding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie_detail">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <LinearLayout
                        android:id="@+id/cotentPanel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/icon_count"
                            android:src="@drawable/ic_like"
                            app:tint="@color/textColorActiveIcons" />

                        <TextView
                            android:id="@+id/tv_vote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="7.9" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cotentPanel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/icon_date_release"
                            android:src="@drawable/ic_calendar"
                            app:tint="@color/textColorActiveIcons"/>

                        <TextView
                            android:id="@+id/tv_dateRelease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="12-12-2021" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cotentPanel3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="0dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/icon_popularity"
                            android:src="@drawable/ic_popularity"
                            app:tint="@color/textColorActiveIcons"/>

                        <TextView
                            android:id="@+id/tv_popularity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="16dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="14700" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_descripcion_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    tools:text="" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>